--- a/АзбМорзе/index.html
+++ b/АзбМорзе/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>МОРСКОЙ БОЙ</title>
+    <title>Азбука Морзе</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css"  href="ind.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
