Refactore code and add input-ranges for setting

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <div class="medium">
   <div>
-    <input class="polzunok" id="frequencyRange" type="range" min="500" max="1500" step="1" value="800">
-    <input class="polzunok" type="durationFactor" min="0" max="100" step="1" value="20"><!--don't ready yet-->
+    <label class="label_polz">Частота звука <input class="polzunok" id="frequencyRange" type="range" min="500" max="1500" step="1" value="800"></label>
+    <label class="label_polz">Длительность звука <input class="polzunok" id="durationCoefficient" type="range" min="10" max="300" step="10" value="100"></label>
   </div>
   <div class="elem_form elem_form-button">
     <img src="images/стрелка.png" alt="" id="translateButton">
